[package]
name = "raytracer"
version = "0.1.0"
authors = ["James Teow <james.teow83@gmail.com>"]
edition = "2018"

[[bin]]
name = "raytracer"
path = "src/main.rs"

[lib]
name = "raytracer"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.8.0" 